<resources>
    <string name="app_name">beatyourneat</string>
    <string name="loginUser">User</string>
    <string name="loginPassword">Password</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonRegister">Register</string>
    <string name="registerUser">User</string>
    <string name="registerPassword">Password</string>
    <string name="registerCancel">Cancel</string>
    <string name="profileMale">Male</string>
    <string name="profileFemale">Female</string>
    <string name="profileGender">Choose your gender</string>
    <string name="profileHeight">Your height</string>
    <string name="ProfileSelectHeight">Select height</string>
    <string name="profileAge">Your age</string>
    <string name="profileSelectAge">Select age</string>
    <string name="profileWeight">Your weight</string>
    <string name="profileSelectWeight">Select weight</string>
    <string name="buttonNext">Next</string>
    <string name="Weight">Weight</string>
    <string name="Date">Date</string>
    <string name="SelectDate">Select date</string>
    <string name="Apply">Apply</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Cancel">Cancel</string>
    <string name="DarkMode">Dark Mode</string>
    <string name="Logout">Logout</string>
    <string name="DeleteAccount">Delete Account</string>
    <string name="BodyParameters">Your latest body parameters</string>
    <string name="Bodyfat">Body fat percentage</string>
    <string name="BodyFat">Body fat: e.g. 13</string>
    <string name="SelectBodyFat">select body fat</string>
    <string name="DoYouKnowBodyFat">Do you know your body fat?</string>
    <string name="Excamples">Examples</string>
    <string name="Calculate">Calculate</string>
    <string name="Kcal">Kcal</string>
    <string name="Protein">Protein</string>
    <string name="Carbs">Carbs</string>
    <string name="Fats">Fats</string>
    <string name="ActivityLevel">What\'s your activity level?</string>
    <string name="spinner_description">Activity Level Selection</string>
    <string name="NewUser">New Username</string>
    <string name="OldUser">Current Username</string>
    <string name="OldPassword">Current Password</string>
    <string name="NewPassword">New Password</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="DeleteAccountText">Are you sure you want to delete your account?</string>
    <string name="Confirm">Confirm</string>
    <string name="EnterPassword">Enter your password</string>
    <string name="DeleteQuestion">Are you sure you want to delete your account?</string>
    <string-array name="ActivityLevels">
        <item>not exhausting (Netflix)</item>
        <item>little strenuous (Office job)</item>
        <item>exhausting (Gastronomy)</item>
        <item>very exhausting (Construction site)</item>
    </string-array>
</resources>