<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_deleteAccountDialogQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DeleteQuestion"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_deleteAccountDialogEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/EnterPassword"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="end">

        <TextView
            android:id="@+id/tv_deleteAccountDialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/Cancel" />

        <TextView
            android:id="@+id/tv_deleteAccountDialogConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/Confirm" />
    </LinearLayout>
</LinearLayout>
