<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_changePasswordDialogOldPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/OldPassword" />

    <EditText
        android:id="@+id/et_changePasswordDialogNewPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/NewPassword" />

    <TextView
        android:id="@+id/tv_changePasswordDialogApply"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="right"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Apply" />

</LinearLayout>
