<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.AddingWeightActivity">

    <TextView
        android:id="@+id/tv_updatedHeightDialogSelectHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/ProfileSelectHeight"
        android:textSize="24sp" />

    <NumberPicker
        android:id="@+id/np_updatedHeightDialogNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp">

    </NumberPicker>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TextView
            android:id="@+id/tv_updatedHeightDialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_weight="1"
            android:text="@string/Cancel"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_updatedHeightDialogApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:text="@string/Apply"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>